<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/task_create_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_thin"
            android:text="@string/task_add"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/task_create_closeBtn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:adjustViewBounds="false"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/close_btn_desc"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/button_close" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/task_create_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:id="@+id/task_create_tiltleContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/task_create_titleLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/task_tittle_label" />

                <EditText
                    android:id="@+id/task_create_titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_textinput"
                    android:ems="10"
                    android:fontFamily="@font/raleway_thin"
                    android:hint="@string/task_tittle_placeholder"
                    android:inputType="textPersonName"
                    android:paddingLeft="4dp"
                    android:paddingTop="8dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/GreyDark"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/task_create_descContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/task_create_descTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/task_desc_label" />

                <EditText
                    android:id="@+id/task_create_descInput"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_textarea"
                    android:fontFamily="@font/raleway_thin"
                    android:gravity="top"
                    android:hint="@string/task_desc_placeholder"
                    android:inputType="textMultiLine"
                    android:paddingLeft="4dp"
                    android:paddingTop="8dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:singleLine="false"
                    android:textColor="@color/GreyDark"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/task_create_categorieContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/task_create_categorieLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/task_categorie_label" />

                    <Spinner
                        android:id="@+id/task_create_categorieInput"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_spinner"
                        android:entries="@array/types" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/task_create_dateContaineri"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/task_create_dateLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/task_date_label" />

                    <Button
                        android:id="@+id/task_create_dateInput"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_date2"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/task_date_input"
                        android:textAlignment="textStart"
                        android:textColor="@color/GreyDark"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/task_create_notifContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/task_create_notifLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/task_notif_label" />

                <RadioGroup
                    android:id="@+id/task_create_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/task_create_notifInput1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/task_notif_sameday"
                        android:textAlignment="textStart"
                        android:textColor="@color/GreyDark"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/task_create_notifInput2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/task_notif_daybefore"
                        android:textAlignment="textStart"
                        android:textColor="@color/GreyDark"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/task_create_notifInput3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/task_notif_weekbefore"
                        android:textAlignment="textStart"
                        android:textColor="@color/GreyDark"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/task_create_notifInput4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/task_notif_none"
                        android:textAlignment="textStart"
                        android:textColor="@color/GreyDark"
                        android:textSize="12sp" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/task_create_addbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/task_add"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>